Fix displaying the scrollbar

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -65,6 +65,7 @@ body {
   display: none; }
   @media (min-width: 700px) {
     ::-webkit-scrollbar {
+      display: block;
       width: 0.5rem; } }
   ::-webkit-scrollbar-track {
     border-radius: 1.5rem; }
